[project]
name = "iptv2m3u"
version = "1.0.0"
description = "从运营商 IPTV 系统提取频道列表，自动匹配 EPG 数据，生成标准 M3U 播放文件"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "AGPL-3.0-or-later" }
keywords = ["iptv", "m3u", "epg", "playlist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle error
    "F",      # pyflakes
    "W",      # pycodestyle warning
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
]
